upgrade traefik from 2.5 to 3.1

--- a/portainer/docker/stacks/traefik.yml
+++ b/portainer/docker/stacks/traefik.yml
@@ -34,7 +34,8 @@ services:
           - "node.role == manager"
           - "node.platform.arch == aarch64"
     # The official v2 Traefik docker image
-    image: "traefik:v2.5"
+    #image: "traefik:v2.5"
+    image: "traefik:v3.1"
     networks:
       - "home"
     ports:
