--- a/portainer/docker/stacks/minecraft.yml
+++ b/portainer/docker/stacks/minecraft.yml
@@ -11,6 +11,7 @@ services:
         traefik.tcp.routers.minecraft_udp.rule: "HostSNI(`minecraft.tlake.io,mc.tlake.io`)"
         traefik.udp.routers.minecraft_udp.service: "minecraft_udp"
         traefik.udp.services.minecraft_udp.loadbalancer.server.address: "artemicion:25565"
+        traefik.udp.services.minecraft_udp.loadbalancer.server.port: "25565"
       mode: "replicated"
       replicas: 1
       restart_policy:
