--- a/argocd/applications/calibre/persistent-volumes.yaml
+++ b/argocd/applications/calibre/persistent-volumes.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 metadata:
   name: "config"
 spec:
-  storageClassName: "nfs-client"
+  storageClassName: "microk8s-hostpath"
   accessModes:
     - ReadWriteMany
   resources:
