--- a/portainer/docker/stacks/nextcloud.yml
+++ b/portainer/docker/stacks/nextcloud.yml
@@ -56,6 +56,27 @@ services:
       - "db_config:/config"
       - "db_data:/var/lib/mysql"
 
+  postgres:
+    deploy:
+      mode: "replicated"
+      replicas: 1
+      placement:
+        constraints:
+          - "node.platform.arch == aarch64"
+      restart_policy:
+        condition: "any"
+    environment:
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_DB: $POSTGRES_DB
+
+    image: "postgres:latest"
+    networks:
+      - "home"
+      - "internal"
+    volumes:
+      - "postgres_data:/var/lib/postgresql/data"
+
   # Given stack name "nextcloud", will create a service "nextcloud_proxy"
   proxy:
     #command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
@@ -113,6 +134,7 @@ volumes:
   app_theme:
   db_config:
   db_data:
+  postgres_data:
   proxy_conf:
 
 ################################
