add linuxserver/mods:universal-calibre for ebook-convert on arm64

--- a/argocd/applications/calibre/deployment.yaml
+++ b/argocd/applications/calibre/deployment.yaml
@@ -21,6 +21,8 @@ spec:
           env:
             - name: "TZ"
               value: "America/Los_Angeles"
+            - name: "DOCKER_MODS"
+              value: "linuxserver/mods:universal-calibre"
           image: "lscr.io/linuxserver/calibre-web:0.6.21"
           ports:
             - name: "app"
