add argocd.local host ; try routing websecure to http port

--- a/argocd/setup/kustomization.yaml
+++ b/argocd/setup/kustomization.yaml
@@ -21,13 +21,13 @@ patches:
       kind: Deployment
       name: argocd-server
 
-  - path: patch-argocd-dex-server-insecure.yaml
-    target:
-      kind: Deployment
-      name: argocd-dex-server
-
-  - path: patch-argocd-repo-server-insecure.yaml
-    target:
-      kind: Deployment
-      name: argocd-repo-server
+        #  - path: patch-argocd-dex-server-insecure.yaml
+        #    target:
+        #      kind: Deployment
+        #      name: argocd-dex-server
+        #
+        #  - path: patch-argocd-repo-server-insecure.yaml
+        #    target:
+        #      kind: Deployment
+        #      name: argocd-repo-server
 
