--- a/argocd/applications/miniflux/routing.yaml
+++ b/argocd/applications/miniflux/routing.yaml
@@ -17,10 +17,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "postgres"
+  name: "miniflux_postgres"
 spec:
   selector:
-    app: "postgres"
+    app: "miniflux_postgres"
   ports:
     - name: "db"
       port: 5432
