sure, underscores are the devil now

--- a/argocd/applications/miniflux/routing.yaml
+++ b/argocd/applications/miniflux/routing.yaml
@@ -20,7 +20,7 @@ metadata:
   name: "miniflux_postgres"
 spec:
   selector:
-    app: "miniflux_postgres"
+    app: "miniflux-postgres"
   ports:
     - name: "db"
       port: 5432
