--- a/argocd/applications/miniflux/deployment.yaml
+++ b/argocd/applications/miniflux/deployment.yaml
@@ -58,7 +58,7 @@ spec:
                   key: "postgres_user"
 
             - name: "DATABASE_URL"
-              value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@miniflux_postgres:5432/$(POSTGRES_DB)"
+              value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@miniflux-postgres:5432/$(POSTGRES_DB)"
               #value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)?sslmode=disable"
 
             - name: "RUN_MIGRATIONS"
@@ -69,7 +69,7 @@ spec:
             - name: "app"
               containerPort: 8080
 
-        - name: "miniflux_postgres"
+        - name: "miniflux-postgres"
           env:
             - name: "POSTGRES_DB"
               valueFrom:
