--- a/argocd/applications/miniflux/deployment.yaml
+++ b/argocd/applications/miniflux/deployment.yaml
@@ -83,6 +83,9 @@ spec:
                   name: "config"
                   key: "postgres_password"
 
+            - name: "POSTGRES_PORT"
+              value: "5433"
+
             - name: "POSTGRES_USER"
               valueFrom:
                 secretKeyRef:
