--- a/argocd/applications/miniflux/routing.yaml
+++ b/argocd/applications/miniflux/routing.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "miniflux"
+  namespace: "miniflux"
 
 spec:
   ports:
@@ -17,15 +18,18 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "miniflux-postgres"
+  name: "postgres"
+  namespace: "miniflux"
+
 spec:
-  selector:
-    app: "miniflux"
   ports:
     - name: "db"
-      port: 5433
+      port: 5432
       protocol: TCP
       targetPort: "db"
+
+  selector:
+    app: "miniflux"
 
 ---
 
