--- a/argocd/applications/miniflux/deployment.yaml
+++ b/argocd/applications/miniflux/deployment.yaml
@@ -16,50 +16,50 @@ spec:
         app: "miniflux"
     spec:
       containers:
-        - name: "miniflux"
-          env:
-            - name: "ADMIN_PASSWORD"
-              valueFrom:
-                secretKeyRef:
-                  name: "config"
-                  key: "miniflux_admin_password"
-
-            - name: "ADMIN_USERNAME"
-              valueFrom:
-                secretKeyRef:
-                  name: "config"
-                  key: "miniflux_admin_user"
-
-            - name: "BASE_URL"
-              value: "https://rss.tlake.io"
-
-            - name: "CREATE_ADMIN"
-              value: "1"
-
-            - name: "METRICS_COLLECTOR"
-              value: "1"
-
-            - name: "POSTGRES_DB"
-              valueFrom:
-                secretKeyRef:
-                  name: "config"
-                  key: "postgres_db"
-
-            - name: "POSTGRES_PASSWORD"
-              valueFrom:
-                secretKeyRef:
-                  name: "config"
-                  key: "postgres_password"
-
-            - name: "POSTGRES_USER"
-              valueFrom:
-                secretKeyRef:
-                  name: "config"
-                  key: "postgres_user"
-
-            - name: "DATABASE_URL"
-              value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)"
-              #value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)?sslmode=disable"
+        #        - name: "miniflux"
+        #          env:
+        #            - name: "ADMIN_PASSWORD"
+        #              valueFrom:
+        #                secretKeyRef:
+        #                  name: "config"
+        #                  key: "miniflux_admin_password"
+        #
+        #            - name: "ADMIN_USERNAME"
+        #              valueFrom:
+        #                secretKeyRef:
+        #                  name: "config"
+        #                  key: "miniflux_admin_user"
+        #
+        #            - name: "BASE_URL"
+        #              value: "https://rss.tlake.io"
+        #
+        #            - name: "CREATE_ADMIN"
+        #              value: "1"
+        #
+        #            - name: "METRICS_COLLECTOR"
+        #              value: "1"
+        #
+        #            - name: "POSTGRES_DB"
+        #              valueFrom:
+        #                secretKeyRef:
+        #                  name: "config"
+        #                  key: "postgres_db"
+        #
+        #            - name: "POSTGRES_PASSWORD"
+        #              valueFrom:
+        #                secretKeyRef:
+        #                  name: "config"
+        #                  key: "postgres_password"
+        #
+        #            - name: "POSTGRES_USER"
+        #              valueFrom:
+        #                secretKeyRef:
+        #                  name: "config"
+        #                  key: "postgres_user"
+        #
+        #            - name: "DATABASE_URL"
+        #              value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)"
+        #              #value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)?sslmode=disable"
 
             - name: "RUN_MIGRATIONS"
               value: "1"
