pin postgres to 16

--- a/argocd/applications/vaultwarden/deployment.yaml
+++ b/argocd/applications/vaultwarden/deployment.yaml
@@ -110,7 +110,7 @@ spec:
                 secretKeyRef:
                   name: "config"
                   key: "postgres_user"
-          image: "postgres:latest"
+          image: "postgres:16"
           ports:
             - name: "db"
               containerPort: 5432
