pin postgres version

--- a/argocd/applications/vaultwarden/deployment.yaml
+++ b/argocd/applications/vaultwarden/deployment.yaml
@@ -84,7 +84,7 @@ spec:
                 secretKeyRef:
                   name: "config"
                   key: "postgres_user"
-          image: "postgres:latest"
+          image: "postgres:16"
           ports:
             - name: "db"
               containerPort: 5432
