--- a/argocd/applications/vaultwarden/kustomization.yaml
+++ b/argocd/applications/vaultwarden/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
+- app.yaml
+- db.yaml
 - persistent-volumes.yaml
-- routing.yaml
 
 namespace: "vaultwarden"
 
