--- a/portainer/docker/stacks/nextcloud.yml
+++ b/portainer/docker/stacks/nextcloud.yml
@@ -14,10 +14,14 @@ services:
       restart_policy:
         condition: "any"
     environment:
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_HOST: $MYSQL_HOST
-      MYSQL_PASSWORD: $MYSQL_PASSWORD
-      MYSQL_USER: $MYSQL_USER
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
+      #MYSQL_DATABASE: $MYSQL_DATABASE
+      #MYSQL_HOST: $MYSQL_HOST
+      #MYSQL_PASSWORD: $MYSQL_PASSWORD
+      #MYSQL_USER: $MYSQL_USER
     image: "nextcloud:29.0-fpm-alpine"
     networks:
       - "home"
