--- a/portainer/docker/stacks/nextcloud.yml
+++ b/portainer/docker/stacks/nextcloud.yml
@@ -74,7 +74,7 @@ services:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_DB: $POSTGRES_DB
 
-    image: "postgres:latest"
+    image: "postgres:16"
     networks:
       - "home"
       - "internal"
