--- a/portainer/docker/stacks/nextcloud.yml
+++ b/portainer/docker/stacks/nextcloud.yml
@@ -18,10 +18,6 @@ services:
       POSTGRES_HOST: $POSTGRES_HOST
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_USER: $POSTGRES_USER
-      #MYSQL_DATABASE: $MYSQL_DATABASE
-      #MYSQL_HOST: $MYSQL_HOST
-      #MYSQL_PASSWORD: $MYSQL_PASSWORD
-      #MYSQL_USER: $MYSQL_USER
     image: "nextcloud:29.0-fpm-alpine"
     networks:
       - "home"
@@ -34,32 +30,7 @@ services:
       - "app_theme:/var/www/html/themes"
       - "/nas/data/filedump:/nas/data/filedump"
 
-
-
-  # Given stack name "nextcloud", will create a service "nextcloud_db"
-  db:
-    deploy:
-      mode: "replicated"
-      replicas: 1
-      placement:
-        constraints:
-          - "node.platform.arch == aarch64"
-      restart_policy:
-        condition: "any"
-    environment:
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_PASSWORD: $MYSQL_PASSWORD
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_USER: $MYSQL_USER
-    image: "linuxserver/mariadb:arm32v7-10.5.12"
-    #image: "linuxserver/mariadb:arm32v7-version-110.4.17mariabionic"
-    networks:
-      - "home"
-      - "internal"
-    volumes:
-      - "db_config:/config"
-      - "db_data:/var/lib/mysql"
-
+  # Given stack name "nextcloud", will create a service "nextcloud_postgres"
   postgres:
     deploy:
       mode: "replicated"
@@ -136,8 +107,6 @@ volumes:
   app_config:
   app_data:
   app_theme:
-  db_config:
-  db_data:
   postgres_data:
   proxy_conf:
 
