--- a/portainer/docker/stacks/nextcloud.yml
+++ b/portainer/docker/stacks/nextcloud.yml
@@ -14,10 +14,10 @@ services:
       restart_policy:
         condition: "any"
     environment:
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_HOST: $MYSQL_HOST
-      MYSQL_PASSWORD: $MYSQL_PASSWORD
-      MYSQL_USER: $MYSQL_USER
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
     image: "nextcloud:29.0-fpm-alpine"
     networks:
       - "home"
@@ -30,10 +30,8 @@ services:
       - "app_theme:/var/www/html/themes"
       - "/nas/data/filedump:/nas/data/filedump"
 
-
-
-  # Given stack name "nextcloud", will create a service "nextcloud_db"
-  db:
+  # Given stack name "nextcloud", will create a service "nextcloud_postgres"
+  postgres:
     deploy:
       mode: "replicated"
       replicas: 1
@@ -43,18 +41,16 @@ services:
       restart_policy:
         condition: "any"
     environment:
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_PASSWORD: $MYSQL_PASSWORD
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_USER: $MYSQL_USER
-    image: "linuxserver/mariadb:arm32v7-10.5.12"
-    #image: "linuxserver/mariadb:arm32v7-version-110.4.17mariabionic"
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_DB: $POSTGRES_DB
+
+    image: "postgres:16"
     networks:
       - "home"
       - "internal"
     volumes:
-      - "db_config:/config"
-      - "db_data:/var/lib/mysql"
+      - "postgres_data:/var/lib/postgresql/data"
 
   # Given stack name "nextcloud", will create a service "nextcloud_proxy"
   proxy:
@@ -111,8 +107,7 @@ volumes:
   app_config:
   app_data:
   app_theme:
-  db_config:
-  db_data:
+  postgres_data:
   proxy_conf:
 
 ################################
